--- a/Front/ProEventos-App/angular.json
+++ b/Front/ProEventos-App/angular.json
@@ -107,5 +107,8 @@
       }
     }
   },
-  "defaultProject": "ProEventos-App"
+  "defaultProject": "ProEventos-App",
+  "cli": {
+    "analytics": "c85caf4c-bbc5-49af-9c12-267b5ac54833"
+  }
 }
